Fix image issue and layout spacing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
     object-fit: cover;
     border: 4px solid rgb(54, 20, 20);
     margin-top: 40px;
+    position: absolute;
+    top: 40px;
 }
 
 .card {
@@ -19,9 +21,24 @@
     border: 2px solid rgb(54, 20, 20);
     border-radius: 25px;
     background-color: antiquewhite;
+    position: relative;
+}
+
+.block {
+    width: inherit;
+    height: 150px;
+    background-color: rgb(54, 20, 20);
+    position: absolute;
+    top: 0;
+    border-radius: 20px 20px 0 0;
 }
 
 .details {
     display: flex;
     gap: 20px;
+}
+
+.name {
+    margin-top: 200px;
+    font-size: 1.7em;
 }
